--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "python.linting.flake8Enabled": true,
     "python.linting.pylintEnabled": false,
     "python.formatting.provider": "black",
+    "python.formatting.blackPath": "/Users/macvp/miniconda3/bin/black",
     "editor.formatOnSave": true
 }
