add config files

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,71 @@
+[metadata]
+name = economicplanning
+version = 0.1.0
+description = Simple economic planning package using linear programming.
+long_description = file: README.md
+long_description_content_type = text/markdown
+author = Pablo V. Parellada
+url = https://github.com/pablovegan/Economic-Planning
+license = MIT
+license_file = LICENSE
+platforms = unix, linux, osx
+classifiers =
+    License :: OSI Approved
+    Programming Language :: Python :: 3
+    Topic :: Software Development
+    Operating System :: Microsoft :: Windows
+    Operating System :: POSIX
+    Operating System :: Unix
+    Operating System :: MacOS
+
+[options]
+packages = economicplanning
+install_requires =
+    numpy
+    scipy
+    pandas
+    cvxpy
+python_requires = >=3.7
+package_dir =
+    =.
+zip_safe = no
+
+[options.extras_require]
+testing =
+    pytest
+    codecov
+    pytest-cov
+    pre-commit
+    tox
+    flake8
+    mypy
+    isort
+    black
+    pre-commit
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    if self\.debug
+    raise AssertionError
+    raise NotImplementedError
+    if __name__ == .__main__.:
+
+[coverage:paths]
+source = economicplanning/*
+
+[coverage:html]
+directory = reports
+
+[coverage:run]
+branch = True
+parallel = True
+omit =
+    setup.py
+    economicplanning/__init__.py
+    economicplanning/_version.py
+
 [isort]
 sections =
     FUTURE,
@@ -13,7 +81,8 @@ known_third_party =
     tensorflow,
     sklearn,
     matplotlib,
-    scipy
+    scipy,
+    cvxpy
 multi_line_output = 3
 lines_after_imports = 2
 force_single_line = True
@@ -30,9 +99,9 @@ max-line-length = 100
 
 
 [mypy]
+ignore_missing_imports = true
 warn_return_any = true
 warn_unused_configs = true
-ignore_missing_imports = true
 follow_imports = silent
 check_untyped_defs = false
 disallow_incomplete_defs = true
