--- a/setup.cfg
+++ b/setup.cfg
@@ -85,7 +85,7 @@ known_third_party =
     cvxpy
 multi_line_output = 3
 lines_after_imports = 2
-force_single_line = True
+force_single_line = False
 use_parentheses = True
 ensure_newline_before_comments = True
 line_length = 80
