--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,19 +1,19 @@
 name: Documentation
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ "master", "main" ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-      - run: |
-         python -m pip install --upgrade pip
-         pip install -r requirements-dev.txt
-         pip install -e .
-      - run: mkdocs gh-deploy --force
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v3
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+    - name: Deploy docs to pages
+      run: mkdocs gh-deploy --force
