--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ authors = [
 description = "Simple economic planning package using linear programming."
 readme = "README.md"
 license = {file = "LICENSE"}
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
@@ -51,11 +51,14 @@ classifiers = [
 dynamic = ["version"]
 
 dependencies = [
-    "pydantic",
+    "pydantic==2.0b2",
     "numpy",
     "scipy",
     "pandas",
-    "cvxpy"
+    "openpyxl",
+    "cvxpy",
+    "matplotlib",
+    "ipykernel"
     ]
 
 [project.optional-dependencies]
