--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -10,6 +10,8 @@ watch: [../README.md, ../economicplan]
 nav:
   - Introduction: index.md
   # defer documentation to the gen-files and literate-nav plugins
+  - Spanish economy: examples/spain.ipynb
+  - Swedish economy: examples/sweden.ipynb
   - API documentation: reference/
 
 theme:
@@ -59,6 +61,11 @@ plugins:
               ignore_init_summary: yes
             merge_init_into_class: yes
             show_submodules: no
+    - mkdocs-jupyter:
+      execute: false
+      include_source: true
+      ignore_h1_titles: True
+      theme: dark
 
 markdown_extensions:
   - pymdownx.snippets:
