--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,4 +16,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install .[dev]
     - name: Deploy docs to pages
-      run: mkdocs gh-deploy --force
+      run: mkdocs gh-deploy --force -f docs/mkdocs.yml
