--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,8 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build
-        pip freeze > requirements.txt
+        pip install .[dev]
     - name: Build package
       run: python -m build
     - name: Publish package
