--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -46,6 +46,7 @@ plugins:
   - gen-files:
       scripts:
       - scripts/gen_ref_nav.py
+      - scripts/copy_examples.py
   - literate-nav:
       nav_file: SUMMARY.txt
   - section-index
