--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
 dynamic = ["version"]
 
 dependencies = [
-    "pydantic==2.0",
+    "pydantic",
     "typing-extensions",
     "numpy",
     "cvxpy",
